--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.1",
     "@playwright/test": "^1.57.0",
     "ai": "^6.0.3",
+    "dotenv": "^17.2.3",
     "ollama-ai-provider-v2": "^1.5.5",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
