--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM"],
     "moduleResolution": "node",
     "rootDir": "./src",
     "outDir": "./dist",
@@ -12,7 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -28,6 +28,17 @@
     "types": ["node", "@playwright/test"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/flows",
+    "src/mimic/schema/targets.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/test-utils.ts",
+    "**/test-utils/**",
+    "**/__tests__/**",
+    "**/__test__/**"
+  ]
 }
 
