--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
-  "name": "mimic",
+  "name": "mimicry",
   "version": "0.1.0",
-  "description": "Mimic is an ai tester who takes instructions and reasons through them to operate the browser and run tests. best used with standard final verification step/screenshots",
-  "main": "index.js",
+  "description": "Mimicry is an ai tester who takes instructions and reasons through them to operate the browser and run tests. best used with standard final verification step/screenshots",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsc",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug"
