much more stable

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ai": "^6.0.3",
     "dotenv": "^17.2.3",
     "http-server": "^14.1.1",
+    "sharp": "^0.33.5",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
   },
