Add funding information to package.json and enhance navigation handling in mimic code
- Added funding details to package.json for GitHub sponsorship.
- Updated navigation logic to support opening pages in new windows/tabs based on action descriptions.
- Enhanced Playwright code generation to accommodate new window/tab functionality.
- Updated navigation action schema to include newWindow parameter for better flexibility in navigation actions.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "url": "https://github.com/nivoset/mimicry.git"
   },
   "homepage": "https://nivoset.github.io/mimicry/",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/nivoset"
+  },
   "packageManager": "pnpm@10.10.0",
   "peerDependencies": {
     "@playwright/test": "^1.57.0"
