--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug",
     "test:selector": "playwright test --grep @selector-generation",
+    "test:troubleshoot": "playwright test --troubleshoot",
     "serve": "http-server test-site -p 3000 -c-1"
   },
   "keywords": [
@@ -52,6 +53,7 @@
   },
   "dependencies": {
     "ai": "^6.0.3",
+    "pocketflow": "^1.0.4",
     "sharp": "^0.33.5",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
@@ -59,9 +61,9 @@
   "devDependencies": {
     "@ai-sdk/openai": "^3.0.1",
     "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "http-server": "^14.1.1",
-    "@types/node": "^25.0.3",
     "ollama-ai-provider-v2": "^1.5.5"
   }
 }
