--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playwright-mimic",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "description": "AI-powered browser testing framework that converts Gherkin or plain language tests into executable code, with self-repair capabilities when tests break due to code changes",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug",
@@ -62,6 +62,7 @@
     "dotenv": "^17.2.3",
     "http-server": "^14.1.1",
     "@types/node": "^25.0.3",
-    "ollama-ai-provider-v2": "^1.5.5"
+    "ollama-ai-provider-v2": "^1.5.5",
+    "tsc-alias": "^1.8.10"
   }
 }
