--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "dependencies": {
     "ai": "^6.0.3",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "sharp": "^0.33.5",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
@@ -59,9 +61,9 @@
   "devDependencies": {
     "@ai-sdk/openai": "^3.0.1",
     "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "http-server": "^14.1.1",
-    "@types/node": "^25.0.3",
     "ollama-ai-provider-v2": "^1.5.5",
     "tsc-alias": "^1.8.10"
   }
