--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "ai": "^6.0.3",
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3",
-    "sharp": "^0.33.5",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@ai-sdk/openai": "^3.0.1",
